feat: ajustes no processo de locação
